// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkButton Should match snapshot and display network 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c0:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c0:hover:enabled {
  border-color: #fff;
}

.c0:active:enabled {
  border: 1px solid #303338;
}

.c1 svg,
.c1 img {
  margin-right: .4rem;
}

.c1,
.c1 button {
  padding: .25rem 0.6rem;
  background-color: #1B1D1F;
}

.c2 {
  height: 1.6rem;
  width: 1.6rem;
}

<div>
   
  <button
    class="c0 c1"
    data-testid="changeNetworkBtn"
  >
    <img
      alt="Icon"
      class="c2"
    />
    Random Chain
  </button>
   
</div>
`;

exports[`NetworkButton Should match snapshot and display not connected status 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: #295FF4;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c0:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c0:hover:enabled {
  border-color: #fff;
}

.c0:active:enabled {
  border: 1px solid #303338;
}

<div>
   
  <button
    class="c0"
  >
    notConnected
  </button>
   
</div>
`;
